--- a/.github/workflows/fixedwheels.yml
+++ b/.github/workflows/fixedwheels.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
+        python-version: [2.7, 3.5, 3.6, 3.7, 3.8, 3.9]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -19,6 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo python -m pip install --upgrade pip
+        sudo pip install build
         sudo python -m pip install pybind11
         sudo apt install python3-venv
         sudo apt install python3-dev
