--- a/.github/workflows/fixedwheels.yml
+++ b/.github/workflows/fixedwheels.yml
@@ -24,7 +24,7 @@ jobs:
         sudo apt install python3-venv
         sudo apt install python3-dev
     - name: Build wheel
-      run: python -m build --output-dir wheelhouse
+      run: python -m build
     - name: Upload wheels
       uses: actions/upload-artifact@v2
       with:
