--- a/.github/workflows/fixedwheels.yml
+++ b/.github/workflows/fixedwheels.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: [2.7, 3.5, 3.6, 3.7, 3.8, 3.9]
+        python-version: [3.5, 3.6, 3.7, 3.8, 3.9]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -18,10 +18,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        sudo python -m pip install --upgrade pip
-        sudo pip install build
-        sudo python -m pip install pybind11
-        sudo apt install python3-venv
+        sudo python3 -m pip install --upgrade pip
+        sudo pip3 install build
+        sudo python3 -m pip install pybind11
     - name: Build wheel
       run: python -m build
     - name: Upload wheels
