--- a/.github/workflows/fixedwheels.yml
+++ b/.github/workflows/fixedwheels.yml
@@ -18,9 +18,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        sudo python3 -m pip3 install --upgrade pip3
-        sudo pip3 install build
-        sudo python3 -m pip3 install pybind11
+        sudo python3 -m pip install --upgrade pip
+        sudo pip install build
+        sudo python3 -m pip install pybind11
     - name: Build wheel
       run: python3 -m build
     - name: Upload wheels
