--- a/.github/workflows/fixedwheels.yml
+++ b/.github/workflows/fixedwheels.yml
@@ -22,4 +22,6 @@ jobs:
     - name: Display Python version
       run: python -c "import sys; print(sys.version)"
     - name: Install dependencies
-      run: python -m pip install --upgrade pip setuptools wheel build
+      run: python -m pip install --upgrade pip setuptools wheel build pybind11
+    - name: Build
+      run: python -m build
