--- a/.github/workflows/fixedwheels.yml
+++ b/.github/workflows/fixedwheels.yml
@@ -25,3 +25,7 @@ jobs:
       run: python -m pip install --upgrade pip setuptools wheel build pybind11
     - name: Build
       run: python -m build
+    - name: Upload building results
+      uses: actions/upload-artifact@v2
+      with:
+        path: wheelhouse/*.whl
