--- a/.github/workflows/fixedwheels.yml
+++ b/.github/workflows/fixedwheels.yml
@@ -23,8 +23,10 @@ jobs:
       run: python -c "import sys; print(sys.version)"
     - name: Install dependencies
       run: python -m pip install --upgrade pip setuptools wheel build pybind11
+    - name: Create directory
+      run: mkdir wheelhouse
     - name: Build
-      run: python -m build
+      run: python -m build -o ./wheelhouse/
     - name: Upload building results
       uses: actions/upload-artifact@v2
       with:
