--- a/.github/workflows/fixedwheels.yml
+++ b/.github/workflows/fixedwheels.yml
@@ -5,12 +5,13 @@ on: [push]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       # You can use PyPy versions in python-version.
       # For example, pypy2 and pypy3
       matrix:
-        python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: [3.5, 3.6, 3.7, 3.8, 3.9, 'pypy-3.6', 'pypy-3.7']
 
     steps:
     - uses: actions/checkout@v2
