--- a/.github/workflows/fixedwheels.yml
+++ b/.github/workflows/fixedwheels.yml
@@ -4,16 +4,42 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ${{ matrix.os }}
     strategy:
       # You can use PyPy versions in python-version.
       # For example, pypy2 and pypy3
-      matrix:
-#         os: [ubuntu-latest, windows-latest, macos-latest]
-        os: [windows-latest]
-#         python-version: [3.5, 3.6, 3.7, 3.8, 3.9, 'pypy-3.6', 'pypy-3.7']
-        python-version: [3.8, 3.9]
+      matrix:         
+        os: [ubuntu-latest, macos-latest]
+        python-version: [3.5, 3.6, 3.7, 3.8, 3.9, 'pypy-3.6', 'pypy-3.7']
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    # You can test your matrix by printing the current Python version
+    - name: Display Python version
+      run: python -c "import sys; print(sys.version)"
+    - name: Install dependencies
+      run: python -m pip install --upgrade pip setuptools wheel build pybind11
+    - name: Create directory
+      run: mkdir wheelhouse
+    - name: Build
+      run: python -m build -o ./wheelhouse/
+    - name: Upload building results
+      uses: actions/upload-artifact@v2
+      with:
+        path: wheelhouse/*.whl
+        
+
+  build-win:
+    runs-on: windows-latest
+    strategy:
+      # You can use PyPy versions in python-version.
+      # For example, pypy2 and pypy3
+      matrix:         
+        python-version: [3.5, 3.6, 3.7, 3.8, 3.9, 'pypy-3.6', 'pypy-3.7']
 
     steps:
     - uses: actions/checkout@v2
@@ -30,7 +56,8 @@ jobs:
       run: mkdir wheelhouse
     - name: Build
       run: python -m build -o .\wheelhouse\
-#     - name: Upload building results
-#       uses: actions/upload-artifact@v2
-#       with:
-#         path: wheelhouse/*.whl
+    - name: Upload building results
+      uses: actions/upload-artifact@v2
+      with:
+        path: wheelhouse/*.whl
+
