--- a/.github/workflows/manylinux.yml
+++ b/.github/workflows/manylinux.yml
@@ -20,14 +20,24 @@ jobs:
         pip install flake8
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Build manylinux Python wheels
+    - name: Build manylinux Python wheels2010
       uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2010_x86_64
       with:
-        python-versions: 'cp36-cp36m cp37-cp37m'
-        build-requirements: 'cython numpy'
-    #- name: Publish wheels to PyPI
-     # env:
-      #  TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-       # TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      #run: |
-      #  twine upload dist/*-manylinux*.whl
+        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
+        build-requirements: 'cython numpy pandas pybind11'
+    - name: Build manylinux Python wheels2014
+      uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_x86_64
+      with:
+        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
+        build-requirements: 'cython numpy pandas pybind11'  
+    - name: Build manylinux Python wheels_2_24
+      uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux_2_24_x86_64
+      with:
+        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
+        build-requirements: 'cython numpy pandas pybind11' 
+    - name: Publish wheels to PyPI
+      env:
+       TWINE_USERNAME: __token__
+       TWINE_PASSWORD: ${{ secrets.pypi_password }}
+      run: |
+       twine upload dist/*-manylinux*.whl_2_24
