--- a/.github/workflows/winbuild.yml
+++ b/.github/workflows/winbuild.yml
@@ -9,25 +9,22 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest]
-
+        python-version: [3.5, 3.6, 3.7, 3.8, 3.9]
     steps:
       - uses: actions/checkout@v2
 
       # Used to host cibuildwheel
       - uses: actions/setup-python@v2
         with:
-          python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
-          build-requirements: 'cython numpy pandas pybind11'  
+          python-versions: ${{ matrix.python-version }}
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==1.9.0
 
       - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse
-        # to supply options, put them in 'env', like:
-        # env:
-        #   CIBW_SOME_OPTION: value
-
+        run: python -m cibuildwheel --platform windows --archs all --output-dir wheelhouse
+        env:
+          CIBW_BUILD: cp3*-win*
       - uses: actions/upload-artifact@v2
         with:
           path: ./wheelhouse/*.whl
