--- a/.github/workflows/winbuild.yml
+++ b/.github/workflows/winbuild.yml
@@ -9,14 +9,14 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest]
-        python-version: [3.5, 3.6, 3.7, 3.8, 3.9]
+        python-version: [3.8]
     steps:
       - uses: actions/checkout@v2
 
       # Used to host cibuildwheel
       - uses: actions/setup-python@v2
         with:
-          python-versions: ${{ matrix.python-version }}
+          python-version: ${{ matrix.python-version }}
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==1.9.0
